--- a/src/java/com/vbrothers/properties/defvals_en.properties
+++ b/src/java/com/vbrothers/properties/defvals_en.properties
@@ -1,2 +1,3 @@
-javax.faces.component.UIInput.REQUIRED=Required
+javax.faces.component.UIInput.REQUIRED=Value required
+javax.faces.converter.LongConverter.LONG=The value must be numeric
 
