--- a/src/java/com/vbrothers/properties/defvals_en.properties
+++ b/src/java/com/vbrothers/properties/defvals_en.properties
@@ -1,3 +1,2 @@
-javax.faces.component.UIInput.REQUIRED=Value required
-javax.faces.converter.LongConverter.LONG=The value must be numeric
-
+javax.faces.component.UIInput.REQUIRED=Valor Requerido 
+javax.faces.converter.LongConverter.LONG=El valor debe ser num\u00e9rico
