--- a/src/java/com/vbrothers/properties/message_en.properties
+++ b/src/java/com/vbrothers/properties/message_en.properties
@@ -1,82 +1,111 @@
 #Labels General
-borrar=Drop
-teminar=Finished
-pagina_actual=Current Page
-pagina_primera=First Page
-anterior=Previos
-siguiente=Next
-ultima_pagina=Last Page
-usr=User
-pwd=Password
-cargar=Upload
-descargar=download
-volver_proyecto=Back
-nombre=Name
-agregar=Add
-observaciones=Observations
-buscar=Find
-boton_enviar=Sent
+borrar=Borrar
+teminar=Terminar
+pagina_actual=Pag. Actual
+pagina_primera=Primera Pag.
+anterior=Anterior
+siguiente=Siguiente
+ultima_pagina=\u00daltima Pag.
+usr=Usuario
+pwd=Clave
+cargar=Cargar
+descargar=descargar
+volver_proyecto=Volver al Proyecto
+nombre=Nombre
+agregar=Agregar
+observaciones=Observaciones
+buscar=Buscar
+boton_enviar=Enviar
 num_id=Num Id
-actualizar=Update
-activar=Active
-msj_no_cambio_clave=If doesn't want to change password, left the field blank
-cuales=Which?
-fecha_ini=Start Date
-fecha_fin=End Date
-actividad=Activity
-empleado=Employe
+actualizar=Actualizar
+activar=Activar
+msj_no_cambio_clave=Si no desea cambiar la clave, deje el campo vacio
+cuales=Cuales
+fecha_ini=Fecha Inicio
+fecha_fin=Fecha Fin
+actividad=Actividad
+numero=N\u00famero
+creador=Creador
+
+#Labels pagina permisos de trabajo
+num_permiso_trabajo=N\u00famero Permiso de Trabajo
+permiso_trabajo=Permiso de Trabajo
+crear_nuevo_permiso=Crear Nuevo Permiso de Trabajo
+tipo_trabajo=Tipo de Trabajo:
+proyecto=Proyecto
+orden_trabajo=Orden de Trabajo
+correctivo_sin_orden=Trabajo Correctivo Sin Orden
+nro_orden=Nro. Orden
+nro_correctivo=Nro Trabajo Correctivo
+titulo_trabajo=Nombre Permiso de Trabajo
+titulo_tarea=Nombre Tarea
+tareas_permiso_trabajo=Tareas
+usuario_ejecutante=Usuario Ejecutante
+datos_tarea=Datos Tarea
+area_sitio=Area/Sitio
+equipo_intervenido=Equipo a ser intervenido
+tarea=Tarea a realizar
+tipo_ejecutante=Tipo Ejecutante
+crear_nueva_tarea=Crear Nueva Tarea
+agregar_tarea=Agregar Tarea
+iniciacion=Iniciaci\u00f3n
+terminacion=Terminaci\u00f3n
+
+
 
 #Labels pagina empleados
-acceso_denegado=Acces Denied
-clave_nueva=New Password
-conf_clave_nueva=Confirm New Password
-buscar_empleado=Find Employee
-datos_empleado=Employee Data
-nuevo_empleado=New Employee
-nombre_completo=Full name
-telefono=Phone
-tipo_sangre=Blood Type
-eps=Medical Secure
-contratista=Contractor
-restricciones_medicas=Medical restrictions
-trabajo_altura=Work at height
-msj_trabajo_altura=Charge the certificate down in the page
-fecha_induccion=Induction Date
-empleado_activo=Active Employee
-empleado_betado=Vetoed Employee
-certificado_medico1=Medical Certificate
-certificado_altura1=Work at Heigth Certificate
-num_id_empleado=Id Employee
-buscar_empleado=Find Employee
-buscar_empleados=Find Staff
-agregar_emp_proyecto=Add Employee to the Project
+acceso_denegado=Acceso Denegado
+clave_nueva=Clave Nueva
+conf_clave_nueva=Confirmar Clave Nueva
+buscar_empleado=Buscar Empleado
+datos_empleado=Datos del Empleado
+nuevo_empleado=Nuevo Empleado
+nombre_completo=Nombre Completo
+telefono=Telefono
+tipo_sangre=Tipo de Sangre
+eps=EPS
+contratista=Contratista
+restricciones_medicas=Restricciones M\u00e9dicas
+trabajo_altura=Trabajo en Altura
+msj_trabajo_altura=Cargue el certificado en la parte de abajo
+fecha_induccion=Fecha Inducci\u00f3n
+empleado_activo=Empleado Activo
+empleado_betado=Empleado Vetado
+certificado_medico1=Certificado M\u00e9dico
+certificado_altura1=Certificado Trabajo en Altura
+num_id_empleado=Num Id Empleado
+buscar_empleado=Buscar Empleado
+buscar_empleados=Buscar Empleados
+agregar_emp_proyecto=Agregar empleado al Proyecto
 
+empleado=Empleado
 
 #Labels P\u00e1gina de Proyectos
-datos_proyecto=Project Data
-num_gestion_cambio=Change Manage Number
-nombre_proyecto=Project Name
-cuenta_cargada=Account Charged
-contratista_sel_evento=Contractor selected by event
-empleados_proy=Project Staff
-contratistas_proy=Project Contractors
+datos_proyecto=Datos del Proyecto
+num_gestion_cambio=N\u00famero de Gesti\u00f3n del Cambio
+nombre_proyecto=Nombre del Proyecto
+cuenta_cargada=Cuenta a la que fue cargada
+contratista_sel_evento=Contratista seleccionado por evento
+empleados_proy=Empleados del Proyecto
+contratistas_proy=Contratistas del Proyecto
+
 
 #Labels P\u00e1gina contratistas
-buscar_contratista=Find Contractor
-datos_contratista=Contractor Data
-nuevo_contratista=New Contractor
-domicilio=Adress
-objeto_social=Social Object
-nombre_contacto=Contact Name
-telefono_contacto=Contact Phone
-correo_electronico=Email
+buscar_contratista=Buscar Contratista
+datos_contratista=Datos del Contratista
+nuevo_contratista=Nuevo Contratista
+domicilio=Domicilio
+objeto_social=Objeto Social
+nombre_contacto=Nombre Contacto
+telefono_contacto=Telefono Contacto
+correo_electronico=Correo Electronico
 arp=ARP
-nivel_riesgo=Risk Level
-contratista_activo=Contractor Active
-empleados=Staff
-empleados_guardar_contratista=To add employee, is necesary to save contractor
-crear_empleado=Create Employee
-
+nivel_riesgo=Nivel de Riesgo
+contratista_activo=Contratista Activo
+empleados=Empleados
+empleados_guardar_contratista=Para agregar empleados es necesario guardar primero al contratista
+crear_empleado=Crear Empleado
 
 #Labels P\u00e1gina Reportes
-reporte=Report
+reporte=Reporte
+
