--- a/src/java/com/vbrothers/properties/message_pt.properties
+++ b/src/java/com/vbrothers/properties/message_pt.properties
@@ -1,89 +1,111 @@
 #Labels General
-borrar=Excluir
-teminar=final
-pagina_actual=Pag. Atual
-pagina_primera=Primeira Pag.
+borrar=Borrar
+teminar=Terminar
+pagina_actual=Pag. Actual
+pagina_primera=Primera Pag.
 anterior=Anterior
-siguiente=Seguinte
-ultima_pagina=Ultima Pag.
+siguiente=Siguiente
+ultima_pagina=\u00daltima Pag.
 usr=Usuario
-pwd=Senha
-cargar=Carregar
-descargar=baixar
-volver_proyecto=Voltar
-nombre=Nome
-agregar=Adicionar
-observaciones=Observa\u00e7oes
-buscar=Procurar
+pwd=Clave
+cargar=Cargar
+descargar=descargar
+volver_proyecto=Volver al Proyecto
+nombre=Nombre
+agregar=Agregar
+observaciones=Observaciones
+buscar=Buscar
 boton_enviar=Enviar
 num_id=Num Id
-actualizar=Atualizar
-activar=Ativar
-msj_no_cambio_clave=Se voce nao quer mudar sehna, deixe em branco
-cuales=Quais?
-fecha_ini=Data de Inicio
-fecha_fin=Date de Fin
-actividad=Atividade
-empleado=Empregado
+actualizar=Actualizar
+activar=Activar
+msj_no_cambio_clave=Si no desea cambiar la clave, deje el campo vacio
+cuales=Cuales
+fecha_ini=Fecha Inicio
+fecha_fin=Fecha Fin
+actividad=Actividad
+numero=N\u00famero
+creador=Creador
+
+#Labels pagina permisos de trabajo
+num_permiso_trabajo=N\u00famero Permiso de Trabajo
+permiso_trabajo=Permiso de Trabajo
+crear_nuevo_permiso=Crear Nuevo Permiso de Trabajo
+tipo_trabajo=Tipo de Trabajo:
+proyecto=Proyecto
+orden_trabajo=Orden de Trabajo
+correctivo_sin_orden=Trabajo Correctivo Sin Orden
+nro_orden=Nro. Orden
+nro_correctivo=Nro Trabajo Correctivo
+titulo_trabajo=Nombre Permiso de Trabajo
+titulo_tarea=Nombre Tarea
+tareas_permiso_trabajo=Tareas
+usuario_ejecutante=Usuario Ejecutante
+datos_tarea=Datos Tarea
+area_sitio=Area/Sitio
+equipo_intervenido=Equipo a ser intervenido
+tarea=Tarea a realizar
+tipo_ejecutante=Tipo Ejecutante
+crear_nueva_tarea=Crear Nueva Tarea
+agregar_tarea=Agregar Tarea
+iniciacion=Iniciaci\u00f3n
+terminacion=Terminaci\u00f3n
+
+
 
 #Labels pagina empleados
-acceso_denegado=Acesso Negado
-clave_nueva=Nova Sehna
-conf_clave_nueva=Confirmar Nova Sehna
-buscar_empleado=Procurar Empregado
-datos_empleado=Dados dos Empregados
-nuevo_empleado=Novo Empregado
-nombre_completo=Nome completo
-telefono=Telefone
-tipo_sangre=Tipo Sanguineo
-eps=Seguro de saude
-contratista=Contratante
-restricciones_medicas=Restri\u00e7oes medicas
-trabajo_altura=Trabalho em altura
-msj_trabajo_altura=Carregue o certificado, baixo na pagina
-fecha_induccion=Data de indu\u00e7ao
-empleado_activo=Empregado ativo
-empleado_betado=Empregado vetado
-certificado_medico1=Atestado medico
-certificado_altura1=Certificado de trabalho em altura
-num_id_empleado=Id Empregado
-buscar_empleado=Procurar Empregado
-buscar_empleados=Buscam Empregados
-agregar_emp_proyecto=Adicionar empregado o projeto
+acceso_denegado=Acceso Denegado
+clave_nueva=Clave Nueva
+conf_clave_nueva=Confirmar Clave Nueva
+buscar_empleado=Buscar Empleado
+datos_empleado=Datos del Empleado
+nuevo_empleado=Nuevo Empleado
+nombre_completo=Nombre Completo
+telefono=Telefono
+tipo_sangre=Tipo de Sangre
+eps=EPS
+contratista=Contratista
+restricciones_medicas=Restricciones M\u00e9dicas
+trabajo_altura=Trabajo en Altura
+msj_trabajo_altura=Cargue el certificado en la parte de abajo
+fecha_induccion=Fecha Inducci\u00f3n
+empleado_activo=Empleado Activo
+empleado_betado=Empleado Vetado
+certificado_medico1=Certificado M\u00e9dico
+certificado_altura1=Certificado Trabajo en Altura
+num_id_empleado=Num Id Empleado
+buscar_empleado=Buscar Empleado
+buscar_empleados=Buscar Empleados
+agregar_emp_proyecto=Agregar empleado al Proyecto
 
+empleado=Empleado
 
 #Labels P\u00e1gina de Proyectos
-datos_proyecto=Dados de projeto
-num_gestion_cambio=Numero de gestao da mudan\u00e7a
-nombre_proyecto=Nome do projeto
-cuenta_cargada=Conta que foi carregado
-contratista_sel_evento=Empreteiro seleccionado por evento
-empleados_proy=Empregados do Projeto
-contratistas_proy=Empreteiros do Projeto
+datos_proyecto=Datos del Proyecto
+num_gestion_cambio=N\u00famero de Gesti\u00f3n del Cambio
+nombre_proyecto=Nombre del Proyecto
+cuenta_cargada=Cuenta a la que fue cargada
+contratista_sel_evento=Contratista seleccionado por evento
+empleados_proy=Empleados del Proyecto
+contratistas_proy=Contratistas del Proyecto
+
 
 #Labels P\u00e1gina contratistas
-buscar_contratista=Procurar Empreteiro
-datos_contratista=Dados do Empreteiro
-nuevo_contratista=Novo Empreteiro
-domicilio=Endere\u00e7o
-objeto_social=Proposito
-nombre_contacto=Nome contato
-telefono_contacto=Telefone contato
-correo_electronico=Email
+buscar_contratista=Buscar Contratista
+datos_contratista=Datos del Contratista
+nuevo_contratista=Nuevo Contratista
+domicilio=Domicilio
+objeto_social=Objeto Social
+nombre_contacto=Nombre Contacto
+telefono_contacto=Telefono Contacto
+correo_electronico=Correo Electronico
 arp=ARP
-nivel_riesgo=nivel de risco
-contratista_activo=Empreteiro ativo
-empleados=Empregados
-empleados_guardar_contratista=Para adicionar empregados, deve salvar empreteiro
-crear_empleado=Criar Empregado
+nivel_riesgo=Nivel de Riesgo
+contratista_activo=Contratista Activo
+empleados=Empleados
+empleados_guardar_contratista=Para agregar empleados es necesario guardar primero al contratista
+crear_empleado=Crear Empleado
 
 #Labels P\u00e1gina Reportes
-reporte=Relato
-
-
-
-
-
-
-
+reporte=Reporte
 
